--- a/force-app/main/default/classes/SummitEventsShared.cls
+++ b/force-app/main/default/classes/SummitEventsShared.cls
@@ -36,8 +36,19 @@ public with sharing class SummitEventsShared {
     public SummitEventsInfo getSummitEventsInfo() {
         //{"audience":"High School Senior","instanceId":"a320m000000A5fOAAS","registrationId":"a350m0000008q63AAA,"eventId":"a330m0000001SOrAAM"}
         SummitEventsInfo eventInformation = new SummitEventsInfo();
-        String URLAudience = ApexPages.currentPage().getParameters().get('audience');
-        String URLInstanceID = ApexPages.currentPage().getParameters().get('instanceID');
+        String URLAudience = '';
+        if(String.isNotBlank(ApexPages.currentPage().getParameters().get('audience'))) {
+            URLAudience = String.escapeSingleQuotes(ApexPages.currentPage().getParameters().get('audience'));
+        }
+        Id URLInstanceID = null;
+        If (String.isNotBlank(ApexPages.currentPage().getParameters().get('instanceID'))) {
+            try {
+                URLInstanceID = (Id) String.escapeSingleQuotes(ApexPages.currentPage().getParameters().get('instanceID'));
+            } catch (Exception e) {
+                System.debug(e.getMessage());
+            }
+        }
+
         String jsonInput = getDecryptCookie();
 
         //See if a cookie exists
@@ -55,8 +66,7 @@ public with sharing class SummitEventsShared {
         }
 
         //check if URL instance has changed
-        if (String.isNotBlank(URLInstanceID)) {
-            if (URLInstanceID.length() > 14) {
+        if (URLInstanceID != null) {
                 if (URLInstanceID != eventInformation.instanceId) {
                     eventInformation.instanceId = URLInstanceID;
                     eventInformation.registrationId = '';
@@ -64,7 +74,6 @@ public with sharing class SummitEventsShared {
                         eventInformation.audience = URLAudience;
                     }
                 }
-            }
         }
 
         //check if registration id is there and whether status it is set to registered. IF so reset cookie if it is.
@@ -113,7 +122,7 @@ public with sharing class SummitEventsShared {
 
         //Get home page link if it exists
         String eventHomeLink = '';
-        String newInstanceId = eventInformation.instanceId;
+        Id newInstanceId = eventInformation.instanceId;
         String newRegistrationId = eventInformation.registrationId;
 
         if (String.isNotBlank(newInstanceId)) {
@@ -135,8 +144,13 @@ public with sharing class SummitEventsShared {
 
         if (onRegistrationPage) {
             if (String.isNotBlank(ApexPages.currentPage().getParameters().get('instanceID'))) {
-                String URLInstanceID = ApexPages.currentPage().getParameters().get('instanceID');
-                if (String.isNotBlank(newInstanceId) && !newInstanceId.equals(URLInstanceID)) {
+                Id URLInstanceID = null;
+                try {
+                    URLInstanceID = (Id) String.escapeSingleQuotes(ApexPages.currentPage().getParameters().get('instanceID'));
+                } catch (Exception e) {
+                    System.debug(e.getMessage());
+                }
+                if (newInstanceId != null && !newInstanceId.equals(URLInstanceID)) {
                     System.debug('Registration page change');
                     newInstanceId = URLInstanceID;
                     newUrl = communityBaseURL + 'SummitEventsRegister?instanceID=' + URLInstanceID;
@@ -281,7 +295,7 @@ public with sharing class SummitEventsShared {
 
     public String navBreadcrumbBuilder(Summit_Events_Instance__c eventInstance, Boolean dateTimeOnly) {
         String instanceDate = '';
-        Time noTime = Time.newInstance(0,0,0,0);
+        Time noTime = Time.newInstance(0, 0, 0, 0);
         if (eventInstance.Instance_Start_Date__c != null && eventInstance.Instance_End_Date__c != null) {
             Datetime convertedStartDate = Datetime.newInstanceGmt(
                     eventInstance.Instance_Start_Date__c.year(),
@@ -340,13 +354,15 @@ public with sharing class SummitEventsShared {
         }
 
         String crumb = '';
+        String eventTitle = eventInstance.Event__r.Event_Name__c;
+        String eventInstanceTitle = eventInstance.Instance_Title__c;
         crumb += '<nav role="navigation" aria-label="Breadcrumbs">';
         crumb += '   <ol class="slds-breadcrumb slds-list--horizontal">';
         if (String.isNotBlank(eventInstance.Event__r.Event_Name__c)) {
-            crumb += '       <li class="slds-breadcrumb__item slds-text-title--caps"><a>' + eventInstance.Event__r.Event_Name__c + '</a></li>';
+            crumb += '       <li class="slds-breadcrumb__item slds-text-title--caps"><a>' + eventTitle + '</a></li>';
         }
         if (String.isNotBlank(eventInstance.Instance_Title__c)) {
-            crumb += '       <li class="slds-breadcrumb__item slds-text-title--caps"><a>' + eventInstance.Instance_Title__c + '</a></li>';
+            crumb += '       <li class="slds-breadcrumb__item slds-text-title--caps"><a>' + eventInstanceTitle + '</a></li>';
         }
         if (String.isNotBlank(instanceDate)) {
             crumb += '       <li class="slds-breadcrumb__item slds-text-title--caps"><a>' + instanceDate + '</a></li>';
